Add welcome screen translation keys

--- a/src/i18n/en/welcome.json
+++ b/src/i18n/en/welcome.json
@@ -1,3 +1,5 @@
 {
-  "placeholder": "placeholder"
+  "getStarted": "Get Started For Free",
+  "haveAccount": "Already Have An Account?",
+  "login": "Log In"
 }
