--- a/src/i18n/en/forgotPassword.json
+++ b/src/i18n/en/forgotPassword.json
@@ -8,5 +8,9 @@
     "submit": {
       "text": "Reset my password"
     }
+  },
+  "toastMessages": {
+    "success": "Password reset email has been sent!",
+    "error": "Sorry! This email is not registered!"
   }
 }
