Refactor error handling

--- a/src/i18n/en/signIn.json
+++ b/src/i18n/en/signIn.json
@@ -16,8 +16,5 @@
     }
   },
   "haveAccount": "Don’t have an account?",
-  "signUp": "Sign Up",
-  "toastMessages": {
-    "error": "Sign in failed with error code: {{-code}}"
-  }
+  "signUp": "Sign Up"
 }
