--- a/src/i18n/tr/doctors.json
+++ b/src/i18n/tr/doctors.json
@@ -1,5 +1,5 @@
 {
-  "title": "Doctors",
-  "subtitle": "Popular This Week",
+  "title": "Hekimler",
+  "subtitle": "Pöpüler hekimler",
   "doctorName": "Dr. {{name}}"
 }
