--- a/src/i18n/tr/forgotPassword.json
+++ b/src/i18n/tr/forgotPassword.json
@@ -1,16 +1,16 @@
 {
-  "title": "Forgot password",
-  "subtitle": "No worries we can fix it for you.",
+  "title": "Şifreyi unuttum",
+  "subtitle": "Kayıtlı mail adresinle şifreyi sıfırlayabilirsin",
   "form": {
     "email": {
-      "placeholder": "Email address"
+      "placeholder": "Mail adresi"
     },
     "submit": {
-      "text": "Reset my password"
+      "text": "Şire sıfırla"
     }
   },
   "toastMessages": {
-    "success": "Password reset email has been sent!",
-    "error": "Sorry! This email is not registered!"
+    "success": "Şifre sıfrlama maili gönderilmiştir!",
+    "error": "Üzgünüz! bu mail adresi kayıtlı değildir"
   }
 }
