Add user profile screen

--- a/src/i18n/en/common.json
+++ b/src/i18n/en/common.json
@@ -1,3 +1,8 @@
 {
-  "drawer": { "signOut": "Sign out", "home": "Home", "doctors": "Doctors" }
+  "drawer": {
+    "signOut": "Sign out",
+    "home": "Home",
+    "doctors": "Doctors",
+    "profile": "Profile"
+  }
 }
