Implement profile screen

--- a/src/i18n/en/profile.json
+++ b/src/i18n/en/profile.json
@@ -1,3 +1,9 @@
 {
-  "title": "Profile"
+  "title": "Profile",
+  "recentAppointments": "Recent Appointments",
+  "appointment": "{{count}} appointment",
+  "appointment_plural": "{{count}} appointments",
+  "language": "App language",
+  "time": "{{date, h:mm a}}",
+  "day": "{{date, do MMM}}"
 }
