Update profile screen style and text

--- a/src/i18n/en/profile.json
+++ b/src/i18n/en/profile.json
@@ -1,6 +1,6 @@
 {
   "title": "Profile",
-  "recentAppointments": "Recent Appointments",
+  "upcomingAppointments": "Upcoming Appointments",
   "appointment": "{{count}} appointment",
   "appointment_plural": "{{count}} appointments",
   "language": "App language",
