--- a/src/i18n/tr/profile.json
+++ b/src/i18n/tr/profile.json
@@ -1,5 +1,5 @@
 {
   "title": "Profil",
-  "recentAppointments": "Son randevular",
+  "upcomingAppointments": "Geleck randevular",
   "appointment": "{{count}} randevu"
 }
