--- a/src/i18n/tr/doctorProfile.json
+++ b/src/i18n/tr/doctorProfile.json
@@ -8,6 +8,5 @@
   "button": {
     "text": "Rezervasyon ekle"
   },
-  "timeFormat": "{{date, h:mm a}}",
-  "dateFormat": "{{date, do MMM}}"
+  "dateFormat": "{{date, EEE, d-MMM}}"
 }
