Add schedule an appointment API (API)

--- a/src/i18n/en/scheduleDialog.json
+++ b/src/i18n/en/scheduleDialog.json
@@ -10,5 +10,8 @@
   },
   "button": {
     "text": "Schedule An Appointment"
+  },
+  "message": {
+    "success": "Appointment reserved successfully"
   }
 }
